Fifth commit- new.html updated with full info.

--- a/new.html
+++ b/new.html
@@ -4,8 +4,47 @@
     </head>
     <body>   
           <p>
-             Milon Mia is a Computer Science and Engineering (CSE) student at Dhaka University<br>
-             with a strong interest in Machine Learning, Web Development, and Software Engineering.<br>
+             🔹 Milon Mia – Aspiring Machine Learning Engineer & CSE Student at Dhaka University<br/>
+                Milon Mia is a passionate and curious Computer Science and Engineering (CSE) student<br/>
+                at Dhaka University, deeply interested in building intelligent systems that can make<br/>
+                human life easier, faster, and more efficient. With a growing foundation in Machine<br/>
+                Learning, Web Development, and Software Engineering, Milon is actively working <br/>
+                towards mastering the technologies that drive innovation in today’s digital world.<br/><br/>
+                
+                From the beginning of his academic journey, Milon has shown a strong inclination<br/>
+                toward understanding how things work under the hood—from data structures and <br/>
+                algorithms to the mathematics behind AI. His current focus is on Machine <br/>
+                Learning, where he's exploring core concepts like supervised and unsupervised<br/>
+                learning, model evaluation, and neural networks. He plans to build real-world<br/>
+                projects that combine both theory and practical application to solidify his understanding.<br/><br/>
+
+                At the same time, he’s learning Object-Oriented Programming (OOP), which he sees<br/>
+                as essential to writing clean, modular, and scalable code—paving the way <br/>
+                toward backend development and large-scale software systems.<br/><br/><br/>
+
+                Beyond coursework, Milon is eager to explore open-source contributions,<br/>
+                participate in hackathons, and collaborate on academic or freelance<br/>
+                tech projects that challenge his skills. He believes in learning by doing,<br/>
+                and he often experiments with new frameworks and tools to stay updated in a fast-evolving tech landscape.<br/><br/>
+
+                💻 Areas of Interest:<br/>
+                Machine Learning & AI<br/>
+                Web Development (Front-end & Back-end)<br/>
+                Software Engineering & System Design<br/>
+                Data Structures & Algorithms<br/>
+                Python, C++, JavaScript<br/><br/>
+
+                🎯 Goals:<br/>
+                    Become a skilled Machine Learning Engineer<br/>
+                    Contribute to impactful, real-world tech solutions<br/>
+                    Build a solid portfolio of projects (GitHub, Kaggle, etc.)<br/>
+                    Pursue internships or research in AI and software development<br/><br/>
+
+                    📌 Personality & Work Ethic:<br/>
+                    Milon is known for his perseverance, eagerness to learn, and ability <br/>
+                    to adapt to new technologies quickly. He values clean code, <br/>
+                    team collaboration, and lifelong learning—traits essential <br/>
+                    for thriving in today’s competitive tech environment.<br/><br/>
              
           </p>
     </body>
